add_subdirectory(integrate)
add_subdirectory(01_PW)
add_subdirectory(02_NAO_Gamma)
add_subdirectory(03_NAO_multik)
add_subdirectory(04_FF)
add_subdirectory(05_rtTDDFT)
add_subdirectory(06_SDFT)
add_subdirectory(07_OFDFT)
add_subdirectory(08_EXX)
add_subdirectory(10_others)
add_subdirectory(11_PW_GPU)
# TODO: Enable after DeltaSpin + DFT+U code is merged into develop
add_subdirectory(17_DS_DFTU)

if(ENABLE_MLALGO)
	add_subdirectory(09_DeePKS)
endif()
